spacing between table columns

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -22,6 +22,9 @@ tr:nth-child(2n+1) {
 td {
 	vertical-align: top;
 }
+td:not(:last-child) {
+	padding-right: .75ex;
+}
 td.subject {
 	min-width: 60%;
 }
