--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -137,7 +137,7 @@ var app = new Vue({
 	methods: {
 		search: function() {
 			let self = this;
-			fetch('/api/query/' + encodeURIComponent(this.query))
+			fetch('/api/query?q=' + encodeURIComponent(this.query))
 			.catch(function(err) {
 				console.error(err);
 				// TODO
