return back to search results when query is updated

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -153,6 +153,9 @@ var app = new Vue({
 	},
 	methods: {
 		search: function() {
+			// back to search result view
+			this.thread = null;
+
 			let self = this;
 			fetch('/api/query?q=' + encodeURIComponent(this.query))
 			.catch(function(err) {
