bring back search after url update

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -134,6 +134,7 @@ let NetViel = Vue.component('netviel', {
 	watch: {
 		$route: function(to, from) {
 			this.query = to.query.q;
+			this.search();
 		},
 	},
 	mounted: function() {
