--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -158,6 +158,182 @@ Vue.component('message', {
 	`,
 });
 
+Vue.component('thread', {
+	data: function() {
+		return {
+			query: this.$route.query.q,
+			results: null,
+			page: this.$route.query.page || 1,
+
+			thread_id: this.$route.params.thread,
+			thread: null,
+		};
+	},
+	watch: {
+		$route: function(to, from) {
+			this.query = to.query.q;
+			this.page = to.query.page || 1;
+			this.thread_id = to.params.thread;
+			this.update();
+		},
+	},
+	mounted: function() {
+		Vue.nextTick(() => {
+			this.$refs.query.focus();
+		});
+		this.update();
+	},
+	methods: {
+		update: function() {
+			if(this.thread_id) {
+				this.fetch_thread();
+			} else {
+				// back to search result view
+				this.thread = null;
+				this.search();
+			}
+		},
+		change_page: function(p) {
+			this.$router.push({
+				name: 'main',
+				query: {
+					q: this.query,
+					page: p,
+				},
+			});
+		},
+		update_query: function() {
+			// update url
+			this.$router.push({
+				name: 'main',
+				query: {
+					q: this.query,
+					page: 1, // also go to the first page
+				},
+			});
+
+		},
+		search: function() {
+			if(!this.query) {
+				this.results = null;
+				return;
+			}
+
+			let self = this;
+			fetch('/api/query?q=' + encodeURIComponent(this.query) + '&page=' + this.page)
+			.then((resp) => {
+				if(!resp.ok)
+					throw new Error(resp.statusText);
+
+				return resp.json();
+			})
+			.catch(function(err) {
+				console.error(err);
+				// TODO
+			})
+			.then(function(data) {
+				self.results = data;
+			});
+		},
+		goto_thread: function(id) {
+			this.$router.push({
+				name: 'thread',
+				query: {
+					q: this.query,
+					page: this.page,
+				},
+				params: { thread: id },
+			});
+		},
+		fetch_thread: function() {
+			let self = this;
+			fetch('/api/thread/' + encodeURIComponent(this.thread_id))
+			.then((resp) => {
+				if(!resp.ok)
+					throw new Error(resp.statusText);
+
+				return resp.json();
+			})
+			.catch(function(err) {
+				console.error(err);
+				// TODO
+			})
+			.then(function(data) {
+				self.thread = data;
+			});
+		},
+		back: function() {
+			this.thread = null;
+			// update url
+			this.$router.push({
+				name: 'main',
+				query: {
+					q: this.query,
+					page: this.page,
+				},
+			});
+		},
+		format_time: function(t) {
+			let dt = new Date(t * 1000);
+			let now = new Date();
+
+			let Y = dt.getFullYear();
+			let m = (dt.getMonth() + 1 + '').replace(/^(.)$/, '0$1');
+			let d = (dt.getDate()      + '').replace(/^(.)$/, '0$1');
+			let H = (dt.getHours()     + '').replace(/^(.)$/, '0$1');
+			let M = (dt.getMinutes()   + '').replace(/^(.)$/, '0$1');
+
+			if(now.getFullYear() != dt.getFullYear()) {
+				return `${Y}-${m}-${d}`
+			} else if(now.getMonth() != dt.getMonth() || now.getDate() != dt.getDate()) {
+				return `${m}-${d}`
+			} else {
+				return `${H}:${M}`;
+			}
+		},
+	},
+	template: `
+		<div>
+			<div class="searchbar">
+				<button class="back" :disabled="!thread" @click="back">←</button>
+				<input v-model="query" ref="query" @keyup.enter="update_query">
+			</div>
+
+			<div v-show="!thread">
+				<div class="pager" v-if="results && results.pages > 1">
+					<span
+						v-for="i in results.pages"
+						:class="{ current: i == page }"
+						@click="change_page(i)"
+						>{{i}}</span>
+				</div>
+
+			<table v-if="results">
+				<tr v-for="res in results.threads" :key="res.thread_id" @click="goto_thread(res.thread_id)">
+					<td class="unread" v-if="res.tags.indexOf('unread') != -1">•</td>
+					<td v-else></td>
+					<td>{{ res.authors }}</td>
+					<td class="subject">
+						<span
+							v-for="tag in res.tags"
+							v-if="['unread', 'attachment', 'replied', 'new'].indexOf(tag) == -1"
+							>{{ tag }}</span>
+						{{ res.subject }}
+					</td>
+					<td>{{ res.matched_messages }}/{{ res.total_messages }}</td>
+					<td v-if="format_time(res.oldest_date) != format_time(res.newest_date)">{{ format_time(res.oldest_date) }} – {{ format_time(res.newest_date) }}</td>
+					<td v-else>{{ format_time(res.oldest_date) }}</td>
+				</tr>
+			</table>
+			</div>
+
+			<template v-if="thread">
+				<message v-for="m in thread" v-bind="m"></message>
+			</template>
+		</div>
+	`,
+});
+
 let NetViel = Vue.component('netviel', {
 	data: function() {
 		return {
