thread: loading indicator

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -195,6 +195,7 @@ Vue.component('thread', {
 	template: `
 		<div>
 			<div v-show="!thread">
+				Loading...
 			</div>
 
 			<template v-if="thread">
