--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -220,6 +220,8 @@ let NetViel = Vue.component('netviel', {
 			this.query = to.query.q;
 			this.page = to.query.page || 1;
 			this.thread_id = to.params.thread;
+			if(from.query.q != to.query.q)
+				this.results = null;
 			this.update();
 		},
 	},
@@ -231,8 +233,7 @@ let NetViel = Vue.component('netviel', {
 	},
 	methods: {
 		update: function() {
-			if(this.thread_id) {
-			} else {
+			if(!this.thread_id && !this.results) {
 				this.search();
 			}
 		},
