--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -247,15 +247,20 @@ let NetViel = Vue.component('netviel', {
 			});
 		},
 		update_query: function() {
-			// update url
-			this.$router.push({
-				name: 'main',
-				query: {
-					q: this.query,
-					page: 1, // also go to the first page
-				},
-			});
+			// (re)load query results unconditionally when enter is pressed
+			this.results = null;
 
+			if(this.$route.query.q == this.query && this.$route.query.page == '1')
+				// force the update if neither query nor page didn't change
+				this.update();
+			else
+				this.$router.push({
+					name: 'main',
+					query: {
+						q: this.query,
+						page: 1, // also go to the first page
+					},
+				});
 		},
 		search: function() {
 			if(!this.query) {
