--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -40,9 +40,14 @@ td.subject > span,
 .tags > span {
 	display: inline-block;
 	background-color: #bdf;
-	padding: .3ex;
+	/* yes, half a pixel, half an en-width, it's not a typo */
+	padding: .5px .5ex;
 	margin-right: .5ex;
 	border-radius: 2px;
+	margin-top: 1px;
+}
+.tags > span {
+	cursor: pointer;
 }
 
 .unread {
