when adding tags, avoid appending extra spaces

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -371,7 +371,7 @@ let NetViel = Vue.component('netviel', {
 			}
 		},
 		append_tag: function(t) {
-			this.query += ' tag:' + t;
+			this.query = this.query.replace(/ *$/, ' tag:' + t);
 			this.$refs.query.focus();
 		},
 	},
