drop drag capsule-looking counters in favor of simpler ones

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -53,30 +53,17 @@ td.subject > span,
 .tags > span {
 	cursor: pointer;
 }
-.tags .unread,
 .tags .total {
 	border-radius: 1em;
 	/* again, not a typo */
 	padding: .5px .5ex;
 	display: inline-block;
+	border: 1px solid #777;
 }
 .tags .unread {
 	background: var(--unread);
 	border: 1px solid var(--unread);
 	color: #fff;
-	border-top-right-radius: 0;
-	border-bottom-right-radius: 0;
-	margin-right: 0;
-	border-right: none;
-}
-.tags .total {
-	border: 1px solid #777;
-}
-.tags .unread + .total {
-	border-top-left-radius: 0;
-	border-bottom-left-radius: 0;
-	margin-left: 0;
-	border-left: none;
 }
 
 .unread-marker {
@@ -397,9 +384,11 @@ let NetViel = Vue.component('netviel', {
 						@click="append_tag(t.name)"
 						>
 						{{ t.name }}
-						<span class="unread" v-if="t.unread">{{ t.unread }}</span><!--
-							keep whitespace away from between these two elements, thanks
-						--><span class="total">{{ t.total }}</span>
+						<span :class="{ total: true, unread: t.unread }">
+							<template v-if="t.unread">{{ t.unread }}/</template><!--
+								keep whitespace away from between these two elements, thanks
+							-->{{ t.total }}
+						</span>
 					</span>
 				</div>
 
