invert unread msg counter colors

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -65,8 +65,7 @@ td.subject > span,
 	display: inline-block;
 }
 .tags .unread {
-	background: var(--unread);
-	color: #fff;
+	color: var(--unread);
 }
 
 .unread-marker {
