not all xapian expressions default to "and": append "and tag:" to the query when picking the label

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -360,7 +360,7 @@ let NetViel = Vue.component('netviel', {
 			}
 		},
 		append_tag: function(t) {
-			this.query = this.query.replace(/ *$/, ' tag:' + t);
+			this.query = this.query.replace(/ *$/, ' and tag:' + t);
 			this.$refs.query.focus();
 		},
 	},
