make labels in the result table clickable as well

--- a/netviel/js/index.html
+++ b/netviel/js/index.html
@@ -404,6 +404,7 @@ let NetViel = Vue.component('netviel', {
 							<span
 								v-for="tag in res.tags"
 								v-if="['unread', 'attachment', 'replied', 'new'].indexOf(tag) == -1"
+								@click.stop="append_tag(tag, $event)"
 								>{{ tag }}</span>
 							{{ res.subject }}
 						</td>
